correcciones y mejoras de diseño

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
     >
       <span class="brand-mark"></span>
       <span class="fs-5 fw-semibold">AutoShare</span>
-      <span class="brand-pill" aria-hidden="true">beta</span>
+      <span class="brand-pill" aria-hidden="true">EM & SG</span>
     </a>
 
     <button
